[add] trade order (delete) functions;
